# Konar_Ariadna_GPS

./: .gitignore  CMakeLists.txt  arimain.c  main.c  testdata
lib/inc/: UBLOX_NEO_07M.h
lib/src/: UBLOX_NEO_07M.c
